# controllers/Auth.js
@@ -4,8 +4,9 @@ var utils = require('../utils/writer.js');
 var Auth = require('../service/AuthService');
 
 module.exports.authLoginPOST = function authLoginPOST (req, res, next) {
-  var api_key = req.swagger.params['api_key'].value;
-  Auth.authLoginPOST(api_key)
+  var hashedpassword = req.swagger.params['hashedpassword'].value;
+  var email = req.swagger.params['email'].value;
+  Auth.authLoginPOST(email,hashedpassword)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -15,8 +16,11 @@ module.exports.authLoginPOST = function authLoginPOST (req, res, next) {
 };
 
 module.exports.authRegisterPOST = function authRegisterPOST (req, res, next) {
-  var api_key = req.swagger.params['api_key'].value;
-  Auth.authRegisterPOST(api_key)
+  var username = req.swagger.params['username'].value;
+  var hashedpassword = req.swagger.params['hashedpassword'].value;
+  var email = req.swagger.params['email'].value;
+  var email = req.swagger.params['salt'].value;
+  Auth.authRegisterPOST(email,username,hashedpassword,salt)
     .then(function (response) {
       utils.writeJson(res, response);
     })
